--- a/css/yoyo.css
+++ b/css/yoyo.css
@@ -186,9 +186,13 @@ a img {
 .img--full {
 	border: 6px solid #fafafa;
 	margin: 0 auto;
-	width: 0;
-	height: 0;
+	width: 100px;
+	height: 100px;
 	position: relative;
+}
+.img--full img {
+	width: 100px;
+	height: 100px;
 }
 .nav--full--next,
 .nav--full--pre {
