--- a/css/yoyo.css
+++ b/css/yoyo.css
@@ -186,7 +186,12 @@ a img {
 .img--full {
 	border: 6px solid #fafafa;
 	margin: 0 auto;
+	width: 319px;
 	position: relative;
+}
+.img--full .load {
+	width: 319px;
+	height: 305px;
 }
 .nav--full--next,
 .nav--full--pre {
