--- a/css/yoyo.css
+++ b/css/yoyo.css
@@ -186,13 +186,20 @@ a img {
 .img--full {
 	border: 6px solid #fafafa;
 	margin: 0 auto;
-	width: 319px;
+	width: 1040px;
+	height: 600px;
+	text-align: center;
 	background: #ffffff;
 	position: relative;
 }
 .img--full .load {
 	width: 319px;
 	height: 305px;
+	position: absolute;
+	left: 50%;
+	top: 50%;
+	margin-top: -150px;
+	margin-left: -160px;
 }
 .nav--full--next,
 .nav--full--pre {
