--- a/css/yoyo.css
+++ b/css/yoyo.css
@@ -190,6 +190,7 @@ a img {
 	height: 600px;
 	background: #ffffff;
 	position: relative;
+	transition: width 0.2s ease;
 }
 .img--full .load {
 	width: 319px;
