--- a/css/yoyo.css
+++ b/css/yoyo.css
@@ -7,6 +7,7 @@ body {
 	font-size: 100%;
 	color: #666666;
 	background: url(../images/bg-body.gif) repeat fixed;
+	user-select: none;
 }
 a img {
 	border: none;
