--- a/css/yoyo.css
+++ b/css/yoyo.css
@@ -106,13 +106,13 @@ a img {
 	line-height: 1.5;
 }
 .img-list .li--copyright div {
-	padding: 4px;
+	padding: 2px;
 }
 .img-list .li--copyright .title {
 	color: #be5e5b;
 	font-size: 1em;
 	font-weight: bold;
-	margin: 10px 10px 40px;
+	margin: 10px;
 }
 .img-list .li--last a,
 .img-list .li--pre a {
