--- a/css/yoyo.css
+++ b/css/yoyo.css
@@ -360,7 +360,7 @@ ul {
 /*article*/
 .main .article {	
 	width: 500px;
-	margin: 20px auto 1px;
+	margin: 20px auto 4px;
 	background: #ffffff;	
 	box-sizing: border-box;
 }
@@ -369,7 +369,10 @@ ul {
 }
 .article .content {
 	padding: 40px;
-	border: 1px solid #cacaca;
+	box-shadow: 0 1px 1px rgba(0,0,0,0.25);
+	-webkit-box-shadow: 0 1px 1px rgba(0,0,0,0.25);
+	-ms-box-shadow: 0 1px 1px rgba(0,0,0,0.25);
+	-moz-box-shadow: 0 1px 1px rgba(0,0,0,0.25);
 	border-top-width: 0;
 }
 .main article h2 {
