--- a/css/yoyo.css
+++ b/css/yoyo.css
@@ -1,6 +1,16 @@
-body,div,h1,h2,h3,h4,p,ul,li,a,span {
+body,article,div,h1,h2,h3,h4,p,ul,li,a,span {
 	margin: 0;
 	padding: 0;
+}
+@font-face {
+	font-family: 'qbt-font';
+	src: url('../font/qbt-font.eot?v5');
+	src: url('../font/qbt-font.eot?v5') format('embedded-opentype'),
+		url('../font/qbt-font.woff?v5') format('woff'),
+		url('../font/qbt-font.ttf?v5') format('truetype'),
+		url('../font/qbt-font.svg?v5') format('svg');
+	font-weight: normal;
+	font-style: normal;
 }
 body {
 	font-family: "宋体","微软雅黑",Helvetica, Arial, "Lucida Grande", sans-serif;
@@ -363,17 +373,20 @@ ul {
 	margin: 20px auto 4px;
 	background: #ffffff;	
 	box-sizing: border-box;
+	position: relative;
 }
 .border-top {
 	border-top: 30px solid #0078b6;
 }
 .article .content {
 	padding: 40px;
+	height: auto;
 	box-shadow: 0 1px 1px rgba(0,0,0,0.25);
 	-webkit-box-shadow: 0 1px 1px rgba(0,0,0,0.25);
 	-ms-box-shadow: 0 1px 1px rgba(0,0,0,0.25);
 	-moz-box-shadow: 0 1px 1px rgba(0,0,0,0.25);
 	border-top-width: 0;
+	transition: all 2s ease;
 }
 .main article h2 {
 	margin-bottom: 20px;
@@ -387,6 +400,47 @@ ul {
 	height: 282px;
 	margin: 0 auto;
 	background: url(../images/letter.png) no-repeat;
+}
+.audio {
+	width: 300px;
+	height: 30px;
+	position: fixed;
+	top: 240px;
+	right: 0;
+	-webkit-transform: translateX(300px);
+	transition: all 0.2s ease-in;
+}
+.audio:before {
+	content: "\e618";
+	width: 30px;
+	font-family: 'qbt-font';
+	height: 30px;
+	line-height: 30px;
+	border-radius: 30px;
+	background: #ffffff;
+	box-shadow: 0 1px 1px rgba(0,0,0,0.25);
+	-webkit-box-shadow: 0 1px 1px rgba(0,0,0,0.25);
+	-ms-box-shadow: 0 1px 1px rgba(0,0,0,0.25);
+	-moz-box-shadow: 0 1px 1px rgba(0,0,0,0.25);
+	text-align: center;
+	position: absolute;
+	left: -40px;
+	top: 0px;
+	transition: all 1s ease;
+}
+.audio audio {
+	width: 300px;
+	height: 30px;
+	border-radius: 0;
+}
+.audio:hover {
+	-webkit-transform: translateX(0);
+}
+.article-load {
+	width: 46px;
+	height: 41px;
+	margin: 30px auto;
+	display: block;
 }
 @media all and (max-width:1440px) {
 	.body .main,
