--- a/css/yoyo.css
+++ b/css/yoyo.css
@@ -424,22 +424,53 @@ ul a:link {
 	-moz-transition: all 0.2s ease-in;
 	transition: all 0.2s ease-in;
 }
-.audio:before {
-	content: "\e618";
-	width: 30px;
-	font-family: 'qbt-font';
+@-webkit-keyframes music {
+	0% {		
+		box-shadow: 0 0 0 1px rgba(0,0,0,0.25);
+		-webkit-transform: rotate(0deg);
+		-moz-transform: rotate(0deg);
+		-ms-transform: rotate(0deg);
+		transform: rotate(0deg);
+	}
+	100% {
+		box-shadow: 0 0 0 4px rgba(68, 107, 128, 0.5);
+		-webkit-transform: rotate(360deg);
+		-moz-transform: rotate(360deg);
+		-ms-transform: rotate(360deg);
+		transform: rotate(360deg);
+	}
+}
+.audio .before {	
 	height: 30px;
+	width: 30px;
 	line-height: 30px;
 	border-radius: 30px;
 	background: #ffffff;
-	box-shadow: 0 1px 1px rgba(0,0,0,0.25);
-	-webkit-box-shadow: 0 1px 1px rgba(0,0,0,0.25);
-	-ms-box-shadow: 0 1px 1px rgba(0,0,0,0.25);
-	-moz-box-shadow: 0 1px 1px rgba(0,0,0,0.25);
+	display: inline-block;
+	box-shadow: 0 0 0 1px rgba(0,0,0,0.25);
+	-webkit-box-shadow: 0 0 0 1px rgba(0,0,0,0.25);
+	-ms-box-shadow: 0 0 0 1px rgba(0,0,0,0.25);
+	-moz-box-shadow: 0 0 0 1px rgba(0,0,0,0.25);
 	text-align: center;
 	position: absolute;
 	left: -40px;
 	top: 0px;
+	 -webkit-animation-name:'music';/*动画属性名，也就是我们前面keyframes定义的动画名*/
+     -webkit-animation-duration: 3s;/*动画持续时间*/
+     -webkit-animation-timing-function: ease-in-out; /*动画频率，和transition-timing-function是一样的*/
+     -webkit-animation-delay: 0s;/*动画延迟时间*/
+     -webkit-animation-iteration-count: infinite;/*定义循环资料，infinite为无限次*/
+     -webkit-animation-direction: alternate;/*定义动画方式*/
+     -webkit-transition: all 5s ease;
+     -ms-transition: all 5s ease;
+     -moz-transition: all 5s ease;
+     transition: all 5s ease;
+}
+.audio .before:before {
+	content: "\e618";	
+	font-family: 'qbt-font';
+	height: 30px;
+	width: 30px;
 }
 .audio audio {
 	width: 300px;
