--- a/css/yoyo.css
+++ b/css/yoyo.css
@@ -440,6 +440,54 @@ ul a:link {
 		transform: rotate(360deg);
 	}
 }
+@-ms-keyframes music {
+	0% {		
+		box-shadow: 0 0 0 1px rgba(0,0,0,0.25);
+		-webkit-transform: rotate(0deg);
+		-moz-transform: rotate(0deg);
+		-ms-transform: rotate(0deg);
+		transform: rotate(0deg);
+	}
+	100% {
+		box-shadow: 0 0 0 4px rgba(68, 107, 128, 0.5);
+		-webkit-transform: rotate(360deg);
+		-moz-transform: rotate(360deg);
+		-ms-transform: rotate(360deg);
+		transform: rotate(360deg);
+	}
+}
+@-moz-keyframes music {
+	0% {		
+		box-shadow: 0 0 0 1px rgba(0,0,0,0.25);
+		-webkit-transform: rotate(0deg);
+		-moz-transform: rotate(0deg);
+		-ms-transform: rotate(0deg);
+		transform: rotate(0deg);
+	}
+	100% {
+		box-shadow: 0 0 0 4px rgba(68, 107, 128, 0.5);
+		-webkit-transform: rotate(360deg);
+		-moz-transform: rotate(360deg);
+		-ms-transform: rotate(360deg);
+		transform: rotate(360deg);
+	}
+}
+@keyframes music {
+	0% {		
+		box-shadow: 0 0 0 1px rgba(0,0,0,0.25);
+		-webkit-transform: rotate(0deg);
+		-moz-transform: rotate(0deg);
+		-ms-transform: rotate(0deg);
+		transform: rotate(0deg);
+	}
+	100% {
+		box-shadow: 0 0 0 4px rgba(68, 107, 128, 0.5);
+		-webkit-transform: rotate(360deg);
+		-moz-transform: rotate(360deg);
+		-ms-transform: rotate(360deg);
+		transform: rotate(360deg);
+	}
+}
 .audio .before {	
 	height: 30px;
 	width: 30px;
