--- a/css/yoyo.css
+++ b/css/yoyo.css
@@ -503,16 +503,14 @@ ul a:link {
 	position: absolute;
 	left: -40px;
 	top: 0px;
-	 -webkit-animation-name:'music';/*动画属性名，也就是我们前面keyframes定义的动画名*/
-     -webkit-animation-duration: 3s;/*动画持续时间*/
-     -webkit-animation-timing-function: ease-in-out; /*动画频率，和transition-timing-function是一样的*/
-     -webkit-animation-delay: 0s;/*动画延迟时间*/
-     -webkit-animation-iteration-count: infinite;/*定义循环资料，infinite为无限次*/
-     -webkit-animation-direction: alternate;/*定义动画方式*/
-     -webkit-transition: all 5s ease;
-     -ms-transition: all 5s ease;
-     -moz-transition: all 5s ease;
-     transition: all 5s ease;
+	-webkit-animation: 'music' 3s linear infinite ;
+	-moz-animation: 'music' 3s linear infinite;
+	-ms-animation: 'music' 3s linear infinite;
+	animation: 'music' 3s linear infinite;     
+    -webkit-transition: all 5s ease;
+    -ms-transition: all 5s ease;
+    -moz-transition: all 5s ease;
+    transition: all 5s ease;
 }
 .audio .before:before {
 	content: "\e618";	
