--- a/css/yoyo.css
+++ b/css/yoyo.css
@@ -504,9 +504,11 @@ ul a:link {
 	left: -40px;
 	top: 0px;
 	-webkit-animation: 'music' 3s linear infinite ;
-	-moz-animation: 'music' 3s linear infinite;
 	-ms-animation: 'music' 3s linear infinite;
-	animation: 'music' 3s linear infinite;     
+	-moz-animation-name: 'music';/*动画属性名，也就是我们前面keyframes定义的动画名*/
+    -moz-animation-duration: 3s;/*动画持续时间*/
+    -moz-animation-timing-function: linear; /*动画频率，和transition-timing-function是一样的*/
+    -moz-animation-iteration-count: infinite;/*定义循环资料，infinite为无限次*/
     -webkit-transition: all 5s ease;
     -ms-transition: all 5s ease;
     -moz-transition: all 5s ease;
