--- a/css/yoyo.css
+++ b/css/yoyo.css
@@ -412,8 +412,8 @@ ul a:link {
 .audio {
 	width: 300px;
 	height: 30px;
-	position: fixed;
-	top: 240px;
+	position: absolute;
+	top: 40px;
 	right: 0;
 	-webkit-transform: translateX(300px);
 	-ms-transform: translateX(300px);
