--- a/css/yoyo.css
+++ b/css/yoyo.css
@@ -77,6 +77,9 @@ ul a:link {
 .head p span {
 	margin: 0 10px;
 }
+.head_nav span {
+	padding: 4px;
+}
 .head h1 span {
 	font-family: "Big Caslon", "Book Antiqua", "Palatino Linotype", Georgia, serif;
 }
@@ -95,6 +98,7 @@ ul a:link {
 	display: inline-block;
 	color: #666666;
 	padding: 4px 20px;
+	margin-left: 10px;
 }
 .head_nav li a.selected {
 	background: #F5EDED;
