--- a/css/yoyo.css
+++ b/css/yoyo.css
@@ -558,6 +558,10 @@ ul a:link {
 }
 .article-nav .selected {
 	border-right-color: #0078b6;
+	-webkit-transform: translateX(-20px);
+	-ms-transform: translateX(-20px);
+	-moz-transform: translateX(-20px);
+	transform: translateX(-20px);
 }
 @media all and (max-width:1440px) {
 	.body .main,
