--- a/css/yoyo.css
+++ b/css/yoyo.css
@@ -431,6 +431,7 @@ ul a:link {
 .audio {
 	width: 300px;
 	height: 30px;
+	padding-left: 20px;
 	position: absolute;
 	top: 40px;
 	right: 0;
@@ -488,7 +489,7 @@ ul a:link {
 	-moz-box-shadow: 0 0 0 1px rgba(0,0,0,0.25);
 	text-align: center;
 	position: absolute;
-	left: -40px;
+	left: -30px;
 	top: 0px;
 	-webkit-animation: music 3s linear infinite ;
 	-ms-animation: music 3s linear infinite;
